--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap');
 body {
   background-color: "#212529";
   margin: 0;
   padding: 0;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+
+.app-Container{
+  
+}
+
+.home-Container{
+
+}
+
+
+.porfolio-Container{
+  display: flex;
+  justify-content: center;
 }
