--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500;700&display=swap');
-body {
-  background-color: "#212529";
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+*{
   margin: 0;
   padding: 0;
+}
+
+body {
   font-family: 'Ubuntu', sans-serif;
 }
 
 
-.app-Container{
-  
+.app-container{
+  height: 100%;
+  width: 100%;
+  background-color: #ffff;
 }
 
-.home-Container{
+.canvas{
+  position: absolute;
+  height: 100%;
+  width: 100%;
 
 }
-
 
 .porfolio-Container{
   display: flex;
