--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 *{
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Varela Round', sans-serif;
 }
 
 
