--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Noto+Sans+SC:wght@500&display=swap');
 *{
   margin: 0;
   padding: 0;
 }
 
 body {
-  background-color: #212529;
-  font-family: 'Varela Round', sans-serif;
+  background-color: #f6f5f5;
+  font-family: 'Merriweather', serif;
+  font-family: 'Noto Sans SC', sans-serif;
+  color:"#ffff"
 }
 
 
@@ -14,13 +16,6 @@ body {
   height: 100%;
   width: 100%;
   background-color: #ffff;
-}
-
-.canvas{
-  position: absolute;
-  height: 100%;
-  width: 100%;
-
 }
 
 .porfolio-Container{
