--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #f6f5f5;
+  background-color: #ffff;
   font-family: 'Merriweather', serif;
   font-family: 'Noto Sans SC', sans-serif;
   color:"#ffff"
