--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,18 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  background-color: #ffff;
+
+  background-color: #ffffff;
   font-family: 'Merriweather', serif;
   font-family: 'Noto Sans SC', sans-serif;
-  color:"#ffff"
+}
+
+footer{
+
 }
 
 
