--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Noto+Sans+SC:wght@500&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Merriweather&family=Noto+Sans+SC:wght@500&display=swap");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -8,23 +8,22 @@
 body {
 
   background-color: #ffffff;
-  font-family: 'Merriweather', serif;
-  font-family: 'Noto Sans SC', sans-serif;
+  font-family: "Merriweather", serif;
+  font-family: "Noto Sans SC", sans-serif;
 }
 
-footer{
-  background-color: #caf0f8;
-  position: relative;
+footer {
+  background-color: #31393c;
+  font-size: large;
 }
 
-
-.app-container{
+.app-container {
   height: 100%;
   width: 100%;
   background-color: #ffff;
 }
 
-.porfolio-Container{
+.porfolio-Container {
   display: flex;
   justify-content: center;
 }
