--- a/src/components/Home/styles.css
+++ b/src/components/Home/styles.css
@@ -2,7 +2,7 @@
     position: relative;
     height: 6em;
     width: 6em;
-    background-color: #0d7377;
+    background-color: #f79824;
     top: -1em;
     display: flex;
     flex-direction: column;
@@ -11,7 +11,18 @@
     letter-spacing: 0.2em;
     font-weight: 600;
     text-transform: uppercase;
+    color: "#ffffff";
 }
+
+/* .bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #f79824;
+    z-index: -1;
+} */
 
 .thinkBoxTxtWrapper {
     display: flex;
@@ -20,26 +31,39 @@
     top: 0.95em;
     line-height: 1em;
 }
+.txtInBox {
+    color: #ffffff;
+}
 
 .txtBox {
-    color: #0d7377;
+    color: #f79824;
 }
 
 @media (max-width: 1280px) {
     .thinkBoxWrapper {
-        font-size: 3.4em;
-        top:0;
+        font-size: 4.2em;
+        top: 0;
     }
 }
 
 @media (max-width: 960px) {
     .thinkBoxWrapper {
-        font-size: 2.8em;
+        position: absolute;
+        font-size: 4.2em;
+        top: 30%;
+        right: 1%;
+        transform: rotate(-15deg);
+        z-index: -1;
     }
 }
 
 @media (max-width: 600px) {
     .thinkBoxWrapper {
-        font-size: 1.8em;
+        position: absolute;
+        font-size: 4em;
+        top: 32%;
+        right: 2%;
+        transform: rotate(-15deg);
+        z-index: -1;
     }
 }
