--- a/src/components/Home/styles.css
+++ b/src/components/Home/styles.css
@@ -1,69 +1,79 @@
-.thinkBoxWrapper {
-    position: relative;
-    height: 6em;
-    width: 6em;
-    background-color: #f79824;
-    top: -1em;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    font-size: 4.5em;
-    letter-spacing: 0.2em;
-    font-weight: 600;
-    text-transform: uppercase;
-    color: "#ffffff";
-}
-
-/* .bg {
+.bg-imgWrapper {
+    box-sizing: border-box;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #f79824;
+    height: fit-content;
+    width: 58rem;
+    right: 10rem;
+    top: 28rem;
+    bottom: 0;
+}
+
+.bg-img {
+    display: block;
+    margin: auto;
+    box-sizing: border-box;
+    padding: 2rem;
+    height: auto;
+    object-fit: contain;
+    object-position: center;
+    max-width: 100%;
     z-index: -1;
-} */
-
-.thinkBoxTxtWrapper {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    top: 0.95em;
-    line-height: 1em;
-}
-.txtInBox {
-    color: #ffffff;
 }
 
-.txtBox {
-    color: #f79824;
+@media (max-width: 1640px) {
+    .bg-imgWrapper {
+        top: 30rem;
+        right: 0rem;
+        width: 52rem;
+    }
 }
 
 @media (max-width: 1280px) {
-    .thinkBoxWrapper {
-        font-size: 4.2em;
-        top: 0;
+    .bg-imgWrapper {
+        top: 35.6rem;
+        right: 0rem;
     }
 }
 
 @media (max-width: 960px) {
-    .thinkBoxWrapper {
-        position: absolute;
-        font-size: 4.2em;
-        top: 30%;
-        right: 1%;
-        transform: rotate(-15deg);
-        z-index: -1;
+    .bg-imgWrapper {
+        top: 35.6rem;
+        width: 48rem;
+    }
+}
+
+@media (max-width: 770px) {
+    .bg-imgWrapper {
+        top: 39rem;
+        width: 38rem;
     }
 }
 
 @media (max-width: 600px) {
-    .thinkBoxWrapper {
-        position: absolute;
-        font-size: 4em;
-        top: 32%;
-        right: 2%;
-        transform: rotate(-15deg);
-        z-index: -1;
+    .bg-imgWrapper {
+        top: 43rem;
+
+        width: 26rem;
+    }
+
+    .bg-img {
+        padding: 0rem;
+        width: 27rem;
+    }
+}
+
+@media (max-width: 485px) {
+    .bg-imgWrapper {
+        top: 47rem;
+        width: 20rem;
+        right: 1.5rem;
+    }
+}
+
+@media (max-width: 350px) {
+    .bg-imgWrapper {
+        top: 49rem;
+        width: 15rem;
+        right: 1rem;
     }
 }
